--- a/PCL/CMakeLists.txt
+++ b/PCL/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
-project(greedy_projection)
+project(pcd_write)
 
 find_package(PCL 1.2 REQUIRED)
 
@@ -8,5 +8,5 @@ include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 
-add_executable (greedy_projection greedy_projection.cpp)
-target_link_libraries (greedy_projection ${PCL_LIBRARIES})
+add_executable (pcd_write pcd_write.cpp)
+target_link_libraries (pcd_write ${PCL_LIBRARIES})
